# aria

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/aria/: __init__.py  cli.py  config.py
src/aria/core/: __init__.py  ai_engine.py  decomposer.py  generator.py  plans_manager.py  runner.py
src/aria/plugins/: __init__.py  base.py  code_review.py  nextjs.py  python_flask.py
src/aria/tui/: __init__.py  dashboard.py  task_viewer.py
src/aria/tui/components/: __init__.py  header.py  reasoning_log.py  task_tree.py
src/aria/utils/: __init__.py  file_ops.py  formatting.py  logger.py
tests/: __init__.py  test_cli.py  test_decomposer.py  test_plugins.py  test_utils.py
